--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("images/Moon2.svg");
+    background-image: url("images/Moon.svg");
 
   }
 
@@ -192,6 +192,7 @@ body {
 
   .scroll-container {
     height: 200px; 
+    width: 90vw;
     overflow-y: scroll; /* Add a vertical scrollbar */
     background-color: #d1f4fe27;    
     border-radius:30px;
@@ -222,8 +223,7 @@ body {
     }
 
     .scroll-container {
-        height: 280px;  
-        
+        height: 280px;      
         border-radius:17px;
         padding: 10px;
       
@@ -231,7 +231,7 @@ body {
 }
 @media only screen and (min-width: 601px){
     footer{
-      height: 180px;
+      height: 320px;
       padding: 10px;
     }
 
@@ -246,7 +246,7 @@ body {
 
   @media only screen and (min-width: 1200px){
      footer {
-      height: 180px;
+      height: 330px;
       padding: 20px;      
      } 
     }
